# ring-client-iot

./: Makefile  Makefile.am  README  callmanager_interface.h  configure.ac  log  main.cpp
iot/: Makefile.am  iotcallmanager.cpp  iotcallmanager.h  iotclient.cpp  iotclient.h  iotconfigurationmanager.cpp  iotconfigurationmanager.h  iotpresencemanager.cpp  iotpresencemanager.h  iotvideomanager.cpp  iotvideomanager.h
